--- a/resources/assets/sass/sitewide-partials/header.scss
+++ b/resources/assets/sass/sitewide-partials/header.scss
@@ -1,5 +1,8 @@
 header {
     .navbar {
+        align-items:center;
+        display: flex;
+        flex-direction: row;
         .navbar-brand {
 
             img {
@@ -11,8 +14,11 @@ header {
         }
         .navbar-nav {
             li {
+                margin-right: 20px;
                 a {
-
+                    font-family: $ralMedium;
+                    font-size: 1.2rem;
+                    text-decoration: none;
                     &:hover {
 
                     }
@@ -41,6 +47,8 @@ header {
             }
         }
         .additionalMenu {
+            margin: 0;
+            padding: 0;
             li {
                 a {
 
