--- a/resources/assets/sass/sitewide-partials/header.scss
+++ b/resources/assets/sass/sitewide-partials/header.scss
@@ -1,59 +1,76 @@
 header {
+    background-color: $darkBlue;
+    padding-bottom: .5rem;
+    padding-top: .5rem;
     .navbar {
         align-items:center;
         display: flex;
         flex-direction: row;
+        .row {
+            width: 100%;
+        }
         .navbar-brand {
-
+            color: $w;
+            font-family: $ralBlack;
+            font-size: 1.25rem;
+            letter-spacing: 2px;
+            margin-right: 40px;
             img {
 
             }
         }
-        .navbar-toggler {
-
-        }
-        .navbar-nav {
-            li {
-                margin-right: 20px;
-                a {
-                    font-family: $ralMedium;
-                    font-size: 1.2rem;
-                    text-decoration: none;
-                    &:hover {
-
-                    }
-                }
-                &.active {
-
-                }
-                &.dropdown {
-                    a {
-
-                        &:hover {
-
-                        }
-                    }
-                    .dropdown-menu {
-                        li {
-                            a {
-
-                                &:hover {
-
-                                }
-                            }
-                        }
-                    }
-                }
-            }
+        .sidebar-toggler {
+            background-color: transparent;
+            border: 0;
+            border-radius: 0;
+            color: $w;
         }
         .additionalMenu {
             margin: 0;
             padding: 0;
             li {
+                margin-right: 15px;
                 a {
-
+                    color: $w;
+                    font-family: $ralReg;
+                    font-size: 1.1rem;
+                    text-decoration: none;
+                    @include transition(all .4s ease-in-out);
                     &:hover {
+                        color: $lightBlue;
+                    }
+                }
+                &:last-of-type {
+                    margin-right: 0;
+                }
+                &.dropdown {
+                    a {
 
+                    }
+                    .dropdown-menu {
+                        background-color: $mediumBlue;
+                        border: 0;
+                        border-radius:0;
+                        li {
+                            display: block;
+                            width: 100%;
+                            a {
+                                color: $w;
+                                text-decoration: none;
+                                @include transition(all .4s ease-in-out);
+
+                                &:hover {
+                                    background-color: transparent;
+                                    border: 0;
+                                    box-shadow: none;
+                                    color: $lightBlue;
+                                    outline: none;
+                                }
+                            }
+                            .dropdown-divider {
+                                border-top: 1px solid lighten($mediumBlue, 20%);
+                            }
+                        }
                     }
                 }
             }
