--- a/resources/assets/sass/sitewide-partials/pageMain.scss
+++ b/resources/assets/sass/sitewide-partials/pageMain.scss
@@ -63,6 +63,68 @@
     }
 
     table {
+        thead {
 
+        }
+        tbody {
+            tr {
+                td {
+                    color: $darkBlue;
+                    font-family: $ralReg;
+                    font-size: 1.1rem;
+                    .dropdown {
+                        button.dropdown-toggle {
+                            background-color: transparent;
+                            border: 0;
+                            border-radius: 0;
+                            color: $darkBlue;
+                            display: block;
+                            font-size: 1.1rem;
+                            text-align: right;
+                            @include transition(all .4s ease-in-out);
+                            width: 100%;
+
+                            &:hover,
+                            &.active {
+                                background-color: transparent;
+                                border: 0;
+                                border-radius: 0;
+                                box-shadow: none;
+                                color: $mediumBlue;
+                                outline: none;
+                                text-decoration: none;
+                            }
+
+                            &:after {
+                                display: none;
+                            }
+                        }
+                        .dropdown-menu {
+                            border: 0;
+                            border-radius: 0;
+                            a {
+                                color: $darkBlue;
+                                display: block;
+                                font-family: $ralReg;
+                                font-size: 1rem;
+                                padding: .5rem;
+                                @include transition(all .4s ease-in-out);
+                                text-decoration: none;
+                                width: 100%;
+
+                                &:hover {
+                                    background-color: transparent;
+                                    border: 0;
+                                    border-radius: 0;
+                                    color: $mediumBlue;
+                                    outline: none;
+                                    text-decoration: none;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
 }
