Worked on the AdminClientController, added the show view for Admin > Client, started work on the Admin > Client show view.  Updated the sidebar and worked on some other styling.

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -21272,12 +21272,10 @@ main.main.full {
   padding: 2rem;
   width: 100%;
 }
-.pageActionsBanner .inner .btn-group {
-  width: 100%;
-}
-.pageActionsBanner .inner .btn-group .btn {
-  display: inline-block;
-  width: auto;
+.pageActionsBanner .inner .btn-wrap {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
 }
 
 .pageMain {
@@ -21339,6 +21337,11 @@ main.main.full {
   padding-right: 0.5rem;
   width: 100%;
 }
+.pageMain table thead th {
+  color: #003b73;
+  font-family: "ralBold", sans-serif;
+  font-size: 1.2rem;
+}
 .pageMain table tbody tr td {
   color: #003b73;
   font-family: "ralReg", sans-serif;
@@ -21389,7 +21392,36 @@ main.main.full {
   outline: none;
   text-decoration: none;
 }
-
+.pageMain .tabpanel .tablist {
+  border-bottom: 1px solid #cccccc;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+.pageMain .tabpanel .tablist a {
+  border: 1px solid #cccccc;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  color: #003b73;
+  font-family: "ralMedium", sans-serif;
+  font-size: 1.1rem;
+  margin-bottom: -1px;
+  padding: 0.5rem 1.5rem;
+  transition: all 0.4s ease-in-out;
+  text-decoration: none;
+}
+.pageMain .tabpanel .tablist a:hover, .pageMain .tabpanel .tablist a.active {
+  background-color: #003b73;
+  border: 1px solid #003b73;
+  color: #ffffff;
+}
+.pageMain .tabpanel .tab-content .tab-pane {
+  border: 1px solid #cccccc;
+  border-top: 0;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  padding: 1rem;
+}
 .dashboardWelcomeBanner .inner {
   background-color: #ffffff;
   border: 0;
