--- a/resources/assets/sass/sitewide-partials/pageMain.scss
+++ b/resources/assets/sass/sitewide-partials/pageMain.scss
@@ -168,6 +168,28 @@
         }
     }
     .whiteBox {
+        background-color: $w;
+        border: 0;
+        border-radius: 10px;
+        margin: 0 0 30px 0;
+        padding: .75rem;
 
+        h5 {
+            color: $darkBlue;
+            font-family: $ralSemiBold;
+            font-size: 1.75rem;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+        table {
+            tbody {
+                tr {
+                    td {
+                        color: $b;
+                        font-size: 1rem;
+                    }
+                }
+            }
+        }
     }
 }
