--- a/resources/assets/sass/sitewide-partials/header.scss
+++ b/resources/assets/sass/sitewide-partials/header.scss
@@ -48,7 +48,7 @@ header {
 
                     }
                     .dropdown-menu {
-                        background-color: #f3f3f3;
+                        background-color: #ffffff;
                         border: 0;
                         border-radius:0;
                         -webkit-box-shadow: 4px 9px 20px -10px rgba(0,0,0,0.5);
