--- a/resources/assets/sass/sitewide-partials/main.scss
+++ b/resources/assets/sass/sitewide-partials/main.scss
@@ -8,3 +8,10 @@ main.main {
         width: 100%;
     }
 }
+
+@media screen and (max-width: 993px) {
+    main.main {
+        margin-left: 0;
+        width: 100%;
+    }
+}
