--- a/resources/assets/sass/sitewide-partials/pageMain.scss
+++ b/resources/assets/sass/sitewide-partials/pageMain.scss
@@ -131,21 +131,30 @@
             }
         }
     }
+    table.rowLinks {
+        tbody {
+            tr:hover {
+                cursor:pointer;
+            }
+        }
+    }
     .tabpanel {
         .tablist {
             border-bottom: 1px solid lighten($b, 80%);
             display: flex;
             flex-direction: row;
             gap: 10px;
+            overflow-x: auto;
+            overflow-y: hidden;
             a {
                 border: 1px solid lighten($b, 80%);
                 border-top-left-radius: 10px;
                 border-top-right-radius: 10px;
                 color: $darkBlue;
                 font-family: $ralMedium;
-                font-size: 1.1rem;
+                font-size: 1rem;
                 margin-bottom: -1px;
-                padding: .5rem 1.5rem;
+                padding: .5rem 1rem;
                 @include transition(all .4s ease-in-out);
                 text-decoration: none;
 
@@ -167,6 +176,7 @@
             }
         }
     }
+
     .whiteBox {
         background-color: $w;
         border: 0;
@@ -191,5 +201,6 @@
                 }
             }
         }
+
     }
 }
