--- a/resources/assets/sass/sitewide-partials/sidebar.scss
+++ b/resources/assets/sass/sitewide-partials/sidebar.scss
@@ -41,6 +41,8 @@
                     border: 0;
                     border-radius: 0;
                     padding: .75rem 0 .75rem .75rem;
+                    position: relative !important;
+                    transform: translate(0px, 0px) !important;
                     li {
                         a {
                             font-family: $ralReg;
