--- a/resources/assets/sass/sitewide-partials/pageMain.scss
+++ b/resources/assets/sass/sitewide-partials/pageMain.scss
@@ -115,13 +115,20 @@
                         .dropdown-menu {
                             border: 0;
                             border-radius: 0;
-                            a {
+                            a,
+                            button{
+                                background-color: transparent;
+                                border: 0;
+                                border-radius: 0;
+                                box-shadow: none;
                                 color: $darkBlue;
                                 display: block;
                                 font-family: $ralReg;
                                 font-size: 1rem;
+                                outline: none;
                                 padding: .5rem;
                                 @include transition(all .4s ease-in-out);
+                                text-align: left;
                                 text-decoration: none;
                                 width: 100%;
 
