Added in the delete function for Client > Show > Transactions, I've also added in a custom function into the AdminClientsContoller to take care of this.

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -21533,6 +21533,12 @@ main.main.full {
   font-size: 2rem;
   line-height: 2.5rem;
 }
+.pageMain .dataTables_wrapper {
+  min-height: 500px;
+}
+.pageMain .dataTables_wrapper table {
+  min-height: 500px;
+}
 
 .dashboardWelcomeBanner .inner {
   background-color: #ffffff;
